# libcutesdeck

./: CMakeLists.txt  README.md  cutesdeck.cpp  cutesdeck.h  cutesdeck_global.h  example.qml
